enable_testing()
find_package(Check REQUIRED)
include_directories(${CHECK_INCLUDE_DIRS})
set(LIBS ${LIBS} ${CHECK_LIBRARIES} utilc-crypto)
include_directories(. ../include)
add_executable(test-utilc-crypto test-utilc-crypto.c)
target_link_libraries(test-utilc-crypto ${LIBS})
add_test(test-utilc-crypto ${CMAKE_CURRENT_BINARY_DIR}/test-utilc-crypto)
